@@ -42,38 +42,30 @@ def wagtailuserbar(context, position='bottom-right'):
     if not user.has_perm('wagtailadmin.access_admin'):
         return ''
 
-    # Don't render if this is a preview. Since some routes can render the userbar without going through Page.serve(),
-    # request.is_preview might not be defined.
-    if getattr(request, 'is_preview', False):
-        return ''
-
     page = get_page_instance(context)
+
     try:
         revision_id = request.revision_id
     except AttributeError:
         revision_id = None
 
     if page and page.id:
-        # Saved page.
-        if revision_id is None:
+        if revision_id:
+            items = [
+                AdminItem(),
+                ExplorePageItem(PageRevision.objects.get(id=revision_id).page),
+                EditPageItem(PageRevision.objects.get(id=revision_id).page),
+                ApproveModerationEditPageItem(PageRevision.objects.get(id=revision_id)),
+                RejectModerationEditPageItem(PageRevision.objects.get(id=revision_id)),
+            ]
+        else:
+            # Not a revision
             items = [
                 AdminItem(),
                 ExplorePageItem(Page.objects.get(id=page.id)),
                 EditPageItem(Page.objects.get(id=page.id)),
                 AddPageItem(Page.objects.get(id=page.id)),
             ]
-        else:
-            items = [
-                AdminItem(),
-                ExplorePageItem(PageRevision.objects.get(id=revision_id).page),
-                EditPageItem(PageRevision.objects.get(id=revision_id).page),
-                AddPageItem(PageRevision.objects.get(id=revision_id).page),
-                ApproveModerationEditPageItem(PageRevision.objects.get(id=revision_id)),
-                RejectModerationEditPageItem(PageRevision.objects.get(id=revision_id)),
-            ]
-    elif page:
-        # A page without an id is a preview.
-        return ""
     else:
         # Not a page.
         items = [AdminItem()]
